[gd_scene load_steps=52 format=3 uid="uid://bxb5dwbcvtql4"]

[ext_resource type="PackedScene" uid="uid://dwmycrnmjyus6" path="res://Models/Anky/Ankylosaurus.glb" id="1_1ojo7"]
[ext_resource type="Script" path="res://Bosses/Anky/anky_boss.gd" id="1_6emht"]
[ext_resource type="Script" path="res://Components/Stats/stats.gd" id="2_u4ojp"]
[ext_resource type="Animation" uid="uid://cs5nsjcwstevw" path="res://Bosses/Anky/Animations/death.res" id="2_yu11f"]
[ext_resource type="Animation" uid="uid://ctrbxgn2mudxe" path="res://Bosses/Anky/Animations/idle.res" id="3_m6hnr"]
[ext_resource type="Animation" uid="uid://k16qa8u6r6yv" path="res://Bosses/Anky/Animations/roll_attack.res" id="4_3ib46"]
[ext_resource type="PackedScene" uid="uid://c1jajrrorycq6" path="res://Components/BossHitbox/BossHitbox.tscn" id="4_4fbe8"]
[ext_resource type="Animation" uid="uid://cuhk80cylfx36" path="res://Bosses/Anky/Animations/tail_attack_left.res" id="5_ktcyf"]
[ext_resource type="Animation" uid="uid://iej8rrqgdha1" path="res://Bosses/Anky/Animations/tail_attack_right.res" id="6_hhdgh"]
[ext_resource type="Animation" uid="uid://b0c3cltawari6" path="res://Bosses/Anky/Animations/throw_attack_up.res" id="7_l6upb"]
[ext_resource type="Animation" uid="uid://bjamyuidcy21l" path="res://Bosses/Anky/Animations/walk.res" id="8_qdx1i"]
[ext_resource type="Animation" uid="uid://o3n4878un458" path="res://Bosses/Anky/Animations/throw_attack_down.res" id="10_8vwxa"]
[ext_resource type="PackedScene" uid="uid://0lhdiufyg5dr" path="res://Components/Target/target.tscn" id="11_w07bf"]
[ext_resource type="Script" path="res://Bosses/Anky/targets.gd" id="13_0lt6n"]
[ext_resource type="AudioStream" uid="uid://bkavlrxmuf0oh" path="res://MusicAndSounds/Sounds/Anky/walk/ank_fs_walk_01.mp3" id="15_qk3x7"]
[ext_resource type="AudioStream" uid="uid://dholtg0rstswg" path="res://MusicAndSounds/Sounds/Anky/walk/ank_fs_walk_02.mp3" id="16_if3fq"]
[ext_resource type="AudioStream" uid="uid://vgmxrqgera36" path="res://MusicAndSounds/Sounds/Anky/walk/ank_fs_walk_03.mp3" id="17_tnbas"]
[ext_resource type="AudioStream" uid="uid://cu6h8w80sm5p2" path="res://MusicAndSounds/Sounds/Anky/walk/ank_fs_walk_04.mp3" id="18_tdald"]
[ext_resource type="AudioStream" uid="uid://djf2x2aufhas2" path="res://MusicAndSounds/Sounds/Anky/walk/ank_fs_walk_05.mp3" id="19_4brhb"]
[ext_resource type="AudioStream" uid="uid://d1hyyxrmiquir" path="res://MusicAndSounds/Sounds/Anky/death/ank_death.mp3" id="20_3x81r"]
[ext_resource type="AudioStream" uid="uid://bn6i31nr14xa" path="res://MusicAndSounds/Sounds/Anky/hit/ank_hit_01.mp3" id="21_ynl3h"]
[ext_resource type="AudioStream" uid="uid://dv77hal6nqkc7" path="res://MusicAndSounds/Sounds/Anky/hit/ank_hit_02.mp3" id="22_y78n1"]
[ext_resource type="AudioStream" uid="uid://c30rnyjryr38m" path="res://MusicAndSounds/Sounds/Anky/hit/ank_hit_03.mp3" id="23_c5v8y"]
[ext_resource type="AudioStream" uid="uid://dtkhxiu36aofb" path="res://MusicAndSounds/Sounds/Anky/hit/ank_hit_04.mp3" id="24_8ox5d"]
[ext_resource type="AudioStream" uid="uid://cmxgh6vsw4oa3" path="res://MusicAndSounds/Sounds/Anky/attacks/ank_roll.mp3" id="25_ptnyy"]
[ext_resource type="AudioStream" uid="uid://b108m7wcfyrnr" path="res://MusicAndSounds/Sounds/Anky/attacks/ank_tail_attack.mp3" id="26_mq6e7"]
[ext_resource type="AudioStream" uid="uid://bvajarbnskp8" path="res://MusicAndSounds/Sounds/Anky/attacks/ank_throw_attack_start.mp3" id="27_hbuw4"]
[ext_resource type="AudioStream" uid="uid://cjpbqri12q2aq" path="res://MusicAndSounds/Sounds/Anky/attacks/ank_throw_attack_end.mp3" id="28_k4nhe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mk0fu"]
radius = 1.32391
height = 5.39644

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3ehwt"]
height = 4.96637

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b627g"]
radius = 0.644541
height = 1.87212

[sub_resource type="Animation" id="Animation_7vcjp"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StompGroundMarker")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 2.86846, 0, -1.32112)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1q4un"]
_data = {
"RESET": SubResource("Animation_7vcjp"),
"death": ExtResource("2_yu11f"),
"idle": ExtResource("3_m6hnr"),
"roll_attack": ExtResource("4_3ib46"),
"tail_attack_left": ExtResource("5_ktcyf"),
"tail_attack_right": ExtResource("6_hhdgh"),
"throw_attack_down": ExtResource("10_8vwxa"),
"throw_attack_up": ExtResource("7_l6upb"),
"walk": ExtResource("8_qdx1i")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bjobf"]
animation = &"throw_attack_down"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_1nfkm"]
fadein_time = 0.5
fadeout_time = 0.5

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yqvub"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uny2m"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_or5n7"]
animation = &"roll_attack"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_wj6sq"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_yt2f8"]
xfade_time = 0.5
input_0/name = "idle_state"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "walk_state"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "throw_attack_state"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "death_state"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eb1ys"]
animation = &"tail_attack_left"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_77sm5"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tqtuh"]
animation = &"tail_attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_26gjx"]
animation = &"throw_attack_up"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_a4vea"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y4rna"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_updbs"]
graph_offset = Vector2(162.437, 326)
nodes/Animation/node = SubResource("AnimationNodeAnimation_bjobf")
nodes/Animation/position = Vector2(-100, 940)
nodes/attack/node = SubResource("AnimationNodeOneShot_1nfkm")
nodes/attack/position = Vector2(760, 500)
nodes/death/node = SubResource("AnimationNodeAnimation_yqvub")
nodes/death/position = Vector2(-100, 1100)
nodes/idle/node = SubResource("AnimationNodeAnimation_uny2m")
nodes/idle/position = Vector2(-120, 20)
nodes/output/position = Vector2(1300, 740)
nodes/roll_attack/node = SubResource("AnimationNodeAnimation_or5n7")
nodes/roll_attack/position = Vector2(-120, 180)
nodes/roll_tail_blend/node = SubResource("AnimationNodeBlend2_wj6sq")
nodes/roll_tail_blend/position = Vector2(420, 500)
nodes/states_trans/node = SubResource("AnimationNodeTransition_yt2f8")
nodes/states_trans/position = Vector2(1020, 660)
nodes/tail_attack_left/node = SubResource("AnimationNodeAnimation_eb1ys")
nodes/tail_attack_left/position = Vector2(-120, 340)
nodes/tail_attack_left_right/node = SubResource("AnimationNodeBlend2_77sm5")
nodes/tail_attack_left_right/position = Vector2(140, 460)
nodes/tail_attack_right/node = SubResource("AnimationNodeAnimation_tqtuh")
nodes/tail_attack_right/position = Vector2(-120, 480)
nodes/throw_attack/node = SubResource("AnimationNodeAnimation_26gjx")
nodes/throw_attack/position = Vector2(-100, 800)
nodes/throw_up_down/node = SubResource("AnimationNodeBlend2_a4vea")
nodes/throw_up_down/position = Vector2(160, 880)
nodes/walk/node = SubResource("AnimationNodeAnimation_y4rna")
nodes/walk/position = Vector2(-100, 640)
node_connections = [&"attack", 0, &"idle", &"attack", 1, &"roll_tail_blend", &"output", 0, &"states_trans", &"roll_tail_blend", 0, &"roll_attack", &"roll_tail_blend", 1, &"tail_attack_left_right", &"states_trans", 0, &"attack", &"states_trans", 1, &"walk", &"states_trans", 2, &"throw_up_down", &"states_trans", 3, &"death", &"tail_attack_left_right", 0, &"tail_attack_left", &"tail_attack_left_right", 1, &"tail_attack_right", &"throw_up_down", 0, &"throw_attack", &"throw_up_down", 1, &"Animation"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_55g5k"]
radius = 2.94513
height = 10.1423

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8duml"]
height = 4.0
radius = 23.7884

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_drott"]
random_pitch = 1.1
streams_count = 5
stream_0/stream = ExtResource("15_qk3x7")
stream_1/stream = ExtResource("16_if3fq")
stream_2/stream = ExtResource("17_tnbas")
stream_3/stream = ExtResource("18_tdald")
stream_4/stream = ExtResource("19_4brhb")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vyfln"]
random_pitch = 1.2
streams_count = 4
stream_0/stream = ExtResource("21_ynl3h")
stream_1/stream = ExtResource("22_y78n1")
stream_2/stream = ExtResource("23_c5v8y")
stream_3/stream = ExtResource("24_8ox5d")

[node name="AnkyBoss" type="CharacterBody3D"]
collision_layer = 16
script = ExtResource("1_6emht")

[node name="Stats" type="Node" parent="."]
script = ExtResource("2_u4ojp")
maxHealth = 250.0
damage = 15.0

[node name="Ankylosaurus2" parent="." instance=ExtResource("1_1ojo7")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.258566, 0)

[node name="Skeleton3D" parent="Ankylosaurus2/Armature" index="0"]
bones/0/position = Vector3(2.84808e-09, -1.17002, -0.328214)
bones/0/rotation = Quaternion(0.0143624, 0.0478326, 0.000687845, 0.998752)
bones/1/rotation = Quaternion(-0.0450631, 1.71889e-09, -0.00432628, 0.998975)
bones/2/rotation = Quaternion(0.0216281, -0.000570332, 0.00848752, 0.99973)
bones/3/position = Vector3(-0.0179636, 1.46461, 0.0748776)
bones/3/rotation = Quaternion(0.343046, 0.00425493, 0.0818733, 0.935734)
bones/4/position = Vector3(-0.0179636, 1.15448, 0.427826)
bones/4/rotation = Quaternion(0.120575, -0.006985, 0.0846905, 0.98906)
bones/5/position = Vector3(-0.0329567, 1.32212, 0.27048)
bones/5/rotation = Quaternion(0.192788, 0.001818, 0.0771852, 0.978198)
bones/6/rotation = Quaternion(0.73567, 0.211428, -0.082174, 0.638228)
bones/7/rotation = Quaternion(-0.48023, -0.0556301, 0.10375, 0.869207)
bones/8/rotation = Quaternion(0.890199, -0.208187, 0.175758, 0.365122)
bones/9/rotation = Quaternion(-0.561124, 0.0523406, -0.121181, 0.817138)
bones/10/rotation = Quaternion(0.9851, -0.0522147, -0.0114405, -0.163464)
bones/11/rotation = Quaternion(-0.167532, -0.00167705, -0.00943576, 0.98582)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(0.0674004, -0.00294095, -0.128677, 0.989389)
bones/13/rotation = Quaternion(0.0165948, 0.01465, -0.148563, 0.988655)
bones/14/rotation = Quaternion(-0.216738, 0.0227839, 0.172978, 0.960513)
bones/15/rotation = Quaternion(-0.00665236, -1.19207e-07, -7.93022e-10, 0.999978)
bones/16/rotation = Quaternion(0.0678824, 0.946201, 0.312188, -0.0513243)
bones/17/rotation = Quaternion(-0.474873, 0.00541189, -0.121868, 0.871559)
bones/18/rotation = Quaternion(-0.0966231, 0.825269, 0.546956, 0.10215)
bones/19/rotation = Quaternion(-0.488248, -0.029479, 0.0522145, 0.870643)
bones/20/position = Vector3(1.56217, 2.3976, 1.1106)
bones/21/position = Vector3(1.34051, -0.452021, 1.07901)
bones/21/rotation = Quaternion(0, 0.999829, 0, -0.0184734)
bones/22/position = Vector3(-1.56217, 1.58941, 1.41814)
bones/23/position = Vector3(-1.34051, -1.30034, 1.35556)
bones/23/rotation = Quaternion(0, 0.999829, 0, 0.0184734)

[node name="BodyHitbox" parent="Ankylosaurus2/Armature/Skeleton3D" index="1" node_paths=PackedStringArray("skeleton", "stats") instance=ExtResource("4_4fbe8")]
skeleton = NodePath("..")
boneName = "Hip"
stats = NodePath("../../../../Stats")
dmgMultiplier = 1.0

[node name="CollisionShape3D" parent="Ankylosaurus2/Armature/Skeleton3D/BodyHitbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.422562, -0.270494)
shape = SubResource("CapsuleShape3D_mk0fu")

[node name="TailMidHitbox" parent="Ankylosaurus2/Armature/Skeleton3D" index="2" node_paths=PackedStringArray("skeleton", "stats") instance=ExtResource("4_4fbe8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.23462, 0)
skeleton = NodePath("..")
boneName = "Tail_3"
stats = NodePath("../../../../Stats")

[node name="CollisionShape3D" parent="Ankylosaurus2/Armature/Skeleton3D/TailMidHitbox" index="0"]
shape = SubResource("CapsuleShape3D_3ehwt")

[node name="TailEndHitbox" parent="Ankylosaurus2/Armature/Skeleton3D" index="3" node_paths=PackedStringArray("skeleton", "stats") instance=ExtResource("4_4fbe8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.91564, 0)
skeleton = NodePath("..")
boneName = "Tail_6"
stats = NodePath("../../../../Stats")
dmgMultiplier = 2.0

[node name="CollisionShape3D" parent="Ankylosaurus2/Armature/Skeleton3D/TailEndHitbox" index="0"]
shape = SubResource("CapsuleShape3D_b627g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Ankylosaurus2")
libraries = {
"": SubResource("AnimationLibrary_1q4un")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Ankylosaurus2")
tree_root = SubResource("AnimationNodeBlendTree_updbs")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/active = false
parameters/attack/internal_active = false
parameters/attack/request = 0
parameters/roll_tail_blend/blend_amount = 0
parameters/states_trans/current_state = "idle_state"
parameters/states_trans/transition_request = ""
parameters/states_trans/current_index = 0
parameters/tail_attack_left_right/blend_amount = 0.0
parameters/throw_up_down/blend_amount = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.106567, 3.94824, 0.869477)
shape = SubResource("CapsuleShape3D_55g5k")

[node name="AttackArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.95171, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.62637, 0)
shape = SubResource("CylinderShape3D_8duml")

[node name="Targets" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.258566, 0)
script = ExtResource("13_0lt6n")

[node name="Target" parent="Targets" node_paths=PackedStringArray("statsComponent") instance=ExtResource("11_w07bf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.61471, 3.87514, 6.10814)
statsComponent = NodePath("../../Stats")

[node name="Target2" parent="Targets" node_paths=PackedStringArray("statsComponent") instance=ExtResource("11_w07bf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.68109, 3.87514, 6.10814)
statsComponent = NodePath("../../Stats")

[node name="StateTransTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true

[node name="StompGroundMarker" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.86846, 0, -1.32112)
gizmo_extents = 0.5

[node name="StompPlayer" type="AudioStreamPlayer3D" parent="StompGroundMarker"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_drott")
volume_db = 4.0
unit_size = 50.0
pitch_scale = 1.2
max_polyphony = 4
bus = &"SFX"

[node name="AudioPlayers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.28691, 0)

[node name="DeathPlayer" type="AudioStreamPlayer3D" parent="AudioPlayers"]
unique_name_in_owner = true
stream = ExtResource("20_3x81r")
unit_size = 50.0
bus = &"SFX"

[node name="HitPlayer" type="AudioStreamPlayer3D" parent="AudioPlayers"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_vyfln")
unit_size = 50.0
max_polyphony = 3
bus = &"SFX"

[node name="RollAttackPlayer" type="AudioStreamPlayer3D" parent="AudioPlayers"]
unique_name_in_owner = true
stream = ExtResource("25_ptnyy")
unit_size = 50.0
max_polyphony = 3
bus = &"SFX"

[node name="TailAttackPlayer" type="AudioStreamPlayer3D" parent="AudioPlayers"]
unique_name_in_owner = true
stream = ExtResource("26_mq6e7")
volume_db = 10.0
unit_size = 50.0
max_polyphony = 3
bus = &"SFX"

[node name="ThrowAtkStartPlayer" type="AudioStreamPlayer3D" parent="AudioPlayers"]
unique_name_in_owner = true
stream = ExtResource("27_hbuw4")
volume_db = 10.0
unit_size = 50.0
bus = &"SFX"

[node name="ThrowAtkEndPlayer" type="AudioStreamPlayer3D" parent="AudioPlayers"]
unique_name_in_owner = true
stream = ExtResource("28_k4nhe")
volume_db = 10.0
unit_size = 50.0
bus = &"SFX"

[connection signal="health_changed" from="Stats" to="." method="_on_stats_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="timeout" from="StateTransTimer" to="." method="_on_state_trans_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]

[editable path="Ankylosaurus2"]
[editable path="Ankylosaurus2/Armature/Skeleton3D/BodyHitbox"]
[editable path="Ankylosaurus2/Armature/Skeleton3D/TailMidHitbox"]
[editable path="Ankylosaurus2/Armature/Skeleton3D/TailEndHitbox"]
